--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 rust_sodium = "0.10.2"
-rand = "0.6.5"
-sha2 = "0.8.0"
-byteorder = "1.3.1"
-
-[dev-dependencies]
-lru = "0.1.15"
+bincode = "1.1.3"
+serde = { version = "1", features = ["derive"] }
+pow = "0.1.2"
+shrinkwraprs = "0.2.1"
